# harish-llm-wiki

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  wiki_config.yaml
docs/: RELEASE_CHECKLIST.md
inputs/: batch_urls.example.txt  resources.example.yaml
scripts/: verify_bm25_search.py  verify_chunk_index.py  verify_hybrid_retrieval.py  verify_mvp_release.py  verify_pdf_import.py  verify_retrieval_eval_report.py  verify_site_static_routes.py  verify_vector_search.py
site/: package-lock.json  package.json  playwright.config.ts
tests/: test_blog_extractors.py  test_chunking.py  test_citations.py  test_cli_behavior.py  test_dedupe.py  test_enrich.py  test_learning_links.py  test_note_repair.py  test_prompt12_media_transcripts.py  test_prompt19.py  test_prompt20.py  test_prompt21.py  test_prompt22.py  test_prompt23_graph.py  test_prompt24_resource_relationships.py  test_prompt25_graph_visualization.py  test_prompt26_pdf_ingestion.py  test_prompt27_chunk_index.py  test_prompt28_bm25_search.py  test_prompt29_vector_search.py  test_prompt30_hybrid_retrieval.py  test_prompt31_retrieval_eval.py  test_prompt32_retrieval_eval_report.py  test_prompt33_context_pack.py  test_prompt34_mvp_closure.py  test_prompt36_explorer_vue.py  test_prompt38_graph_insight_dashboard.py  test_prompt39_graph_path_finder.py  test_prompt40_shareable_graph_urls.py  test_prompt41_graphify_explorer.py  test_prompt48_review_ingest_timeline.py  test_prompt51_branding_ingest_builder.py  test_prompt52a_formatting_ingest_clarity.py  test_prompt52b_home_graph_formatting.py  test_prompt52c_runtime_identity_settings.py  test_prompt52d_local_control_plane.py  test_prompt52e_processing_runs_token_ledger.py  test_prompt7_views.py  (+6 more)
(+156 files in other folders)
